# FLAME

./: CMakeLists.txt
examples/: CMakeLists.txt  customsim.cpp  sim.cpp
python/flame/: CMakeLists.txt  __init__.py  __main__.py  _version.py.in  modconfig.cpp  modmachine.cpp  modmain.cpp  modstate.cpp  pyflame.h
src/: CMakeLists.txt  base.cpp  config.cpp  glps.y  glps_ops.cpp  glps_parser.cpp  glps_parser.h  linear.cpp  moment.cpp  moment_sup.cpp  rf_cavity.cpp  test_config.cpp  test_jb_2.cpp  test_parse.cpp  test_util.cpp  util.cpp  version.cpp
src/cmake/: flameConfig.cmake.in
src/flame/: base.h  chg_stripper.h  config.h  linear.h  moment.h  moment_sup.h  register.h  rf_cavity.h  util.h  version.h.in
src/flame/core/: base.h  config.h
src/flame/state/: matrix.h  vector.h
tools/: CMakeLists.txt  cli.cpp
vaccel/: CMakeLists.txt  bpmtable.cpp  flame.cpp  flame.h  flameSupport.dbd  flamedev.cpp  flameelem.cpp  flamemeasure.cpp  flameorbit.cpp  flameset.cpp
